--- a/css/how.css
+++ b/css/how.css
@@ -14,7 +14,7 @@
     padding-bottom: 100px;
     background-image: url('../img/sota4.svg');
     background-repeat: no-repeat;
-    background-position: left center;
+    background-position: left top;
 }
 
 .round_1 {
