--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,19 @@ textarea {
     position: absolute;
     max-width: 100vw
 }
+
+
+.modal_notification {
+    height: 85px;
+    width: 200px;
+    position: fixed;
+    border: 2px solid #00FDFF;
+    color: white;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    bottom: 15px;
+    left: 10px;
+    z-index: 999;
+    backdrop-filter: blur(5px);
+}
