--- a/css/services.css
+++ b/css/services.css
@@ -126,7 +126,10 @@
     text-transform: uppercase;
     margin: 15px auto 0;
     text-align: center;
+    min-height: 40px;
 }
+
+
 
 .span_services {
     font-family: 'Source Sans Pro';
@@ -137,6 +140,8 @@
     text-align: center;
     color: #FFFFFF;
     margin: 10px auto 0;
+    justify-content: center;
+    display: flex;
 }
 
 .services_ul {
@@ -144,7 +149,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
-    line-height: 20px;
+    line-height: 17px;
     text-transform: uppercase;
     margin-top: 15px;
     margin-left: 25px;
@@ -209,4 +214,14 @@
     transform: rotate(45deg);
     background-color: #1A1A1A;
     z-index: 1;
+}
+
+.wrapper_card {
+    flex: 1 1 auto;
+    min-height: 150px;
+}
+
+.splide__slide {
+    display: flex !important;
+    justify-content: center !important;
 }
