--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,3 @@
-
 .menu-btn {
     width: 60px;
     height: 60px;
@@ -168,6 +167,7 @@
 }
 
 .header_button {
+    display: block;
     font-family: 'Jura', sans-serif;
     font-style: normal;
     font-weight: 600;
@@ -248,6 +248,7 @@
         background-image: url("../img/sotaDesktop.svg");
         background-position: right bottom;
         background-repeat: no-repeat;
+        margin-bottom: 50px;
     }
 }
 
