--- a/css/finally.css
+++ b/css/finally.css
@@ -352,6 +352,12 @@
     }
 }
 
+@media screen and (min-width: 1080px) {
+    .finally_section {
+        background-size: 25%;
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .form_name {
         width: 428px;
@@ -390,5 +396,11 @@
     .input-file {
         top: 1px;
         left: 657px;
+    }
+}
+
+@media (min-width: 1500px) {
+    .finally_section {
+        background-size: 15% !important;
     }
 }
