--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,7 @@
 .footer {
     background-color: #E87C0B;
     height: 170px;
+    z-index: 15;
 }
 
 .footer-cnt {
@@ -14,6 +15,7 @@
     margin-bottom: 22px;
     margin-top: 19px;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
 .footer-2 {
@@ -25,11 +27,17 @@
 .footer-logo {
     width: 45px;
     height: 45px;
+    margin-right: 20px;
+}
+
+.footer-socials {
+    display: flex;
+    justify-content: center;
 }
 
 .footer-title {
     font-size: 16px;
-    max-width: 236px;
+
     font-family: 'Jura';
     font-style: normal;
     font-weight: 700;
@@ -56,23 +64,45 @@
     height: 21px;
 }
 .footer-phone {
-    position: absolute;
-    right: 55px;
     font-family: 'Jura';
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 8px;
-    margin-top: 6px;
+    margin-top: 13px;
     text-align: center;
     letter-spacing: 0.05em;
+    width: 140px;
 }
 .footer_social {
     cursor: pointer;
 }
+
+.footer__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 170px;
+    max-width: 500px;
+}
+
+.footer_left {
+    display: flex;
+    align-items: flex-start;
+}
+
+.footer-2 {
+    display: flex;
+    flex-direction: column;
+}
+
 @media screen and (min-width: 650px) {
     .footer-phone{
-        right: 172px;
+        max-width: 135px;
+        width: 140px;
+    }
+    .footer-title {
+        max-width: 270px;
     }
 }
 
@@ -82,20 +112,21 @@
         height: 70px;
     }
     .footer-title{
-        font-size: 27px;
-        max-width: 480px;
+        font-size: 23px;
+        line-height: 22px;
+        max-width: 500px;
         margin-left: 20px;
+        width: 367px;
     }
-
     .footer-1{
         justify-content: flex-start;
     }
     .footer-subtitle{
-        font-size: 18px;
+        font-size: 14px;
         max-width: 403px;
-        margin-left: 90px;
+        width: 325px;
+        left: 40vw;
     }
-    
     .footer-media{
         position: relative;
         top: -84px;
@@ -120,5 +151,19 @@
     .vk{
         width: 41px;
         height: 31px;
+    }
+    .footer-phone {
+        position: static;
+        width: 150px;
+        max-width: 150px;
+    }
+    .footer-media {
+        position: static;
+    }
+    .footer__container {
+        max-width: 1000px;
+    }
+    .finally_section {
+        background-size: 18%;
     }
 }
