--- a/css/services.css
+++ b/css/services.css
@@ -202,6 +202,17 @@
     justify-content: center !important;
 }
 
+@media screen and (min-width: 650px) and (max-width: 1200px){
+    .sevice_cubik1 {
+        bottom: -8px;
+        left: 216px;
+    }
+    .sevice_cubik2 {
+        right: 216px;
+        top: -9px;
+    }
+}
+
 @media screen and (min-width: 650px) and (max-width: 1080px) {
     .services_section {
 
@@ -215,11 +226,19 @@
     }
 }
 
+@media screen and (min-width: 1080px) {
+    .services_section {
+        background-size: 10%;
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .services_swiper__container{
         display: none;
     }
-
+    .cards_wrapper {
+        display: block;
+    }
     .card {
         width: 338px;
         height: 500px;
@@ -227,7 +246,6 @@
         backdrop-filter: blur(20px);
         border: 4px solid #FF9900;
     }
-
     .cards_wrapper {
         display: flex;
         gap: 66px;
@@ -278,7 +296,7 @@
     }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
     .cards_wrapper{
         display: none;
     }
