--- a/css/style.css
+++ b/css/style.css
@@ -251,9 +251,13 @@ textarea {
         background: linear-gradient(180.23deg, rgba(51, 51, 51, 0.57) 1.99%, rgba(51, 51, 51, 0.564062) 30.01%, rgba(51, 51, 51, 0.536257) 77.23%, rgba(51, 51, 51, 0.536429) 93.32%, rgba(26, 26, 26, 0) 103.75%);
     }
     .sidebar_logo{
-        margin-top: 10px;
         width: 74px;
         height: 74px;
+    }
+    .sidebar_cnt {
+        width: 74px;
+        height: 74px;
+        margin-top: 20px;
         margin-bottom: 30px;
     }
     .sidebar_title{
