--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,12 @@ textarea {
     backdrop-filter: blur(5px);
 }
 
+@media screen and (max-width: 450px) {
+    .modal_notification {
+        font-size: 12px;
+    }
+}
+
 @media screen and (min-width: 650px) and (max-width:1080px){
     body {
         background-image: none;
